feat: Add Chamadas Fragment and button to switch fragments
This commit introduces a new Fragment called `ChamadasFragment` and its corresponding layout `fragment_chamadas.xml`. It also adds functionality to switch between the `ConversasFragment` and the new `ChamadasFragment` using buttons in the `MainActivity`.

Key changes:
- Added `ChamadasFragment.kt` to represent the calls screen.
- Added `fragment_chamadas.xml` as the layout for `ChamadasFragment`.
- Modified `activity_main.xml` to rename the existing buttons to `button_conversas` and `button_chamadas` and updated the `FragmentContainerView` id to `fragment_content`.
- Updated `MainActivity.kt` to implement click listeners for the buttons to replace the content of `fragment_content` with either `ConversasFragment` or `ChamadasFragment`.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_conversas"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_chamadas"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -47,14 +47,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView3"
-        android:name="com.italosassuncao.fragment.fragments.ConversasFragment"
+        android:id="@+id/fragment_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintTop_toTopOf="@+id/guideline"
+        tools:layout="@layout/fragment_conversas" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
